# MaskRCNN-Pytorch

./: .gitignore  README.md  onnx_model_export.py  predict.py  readme.md  requirements.txt  test.py  torch_script_gen.py  train.py  validation.py
backbone/: resnet50_fpn_model.py
deploy/onnx_cpp/: CMakeLists.txt  README.md
deploy/onnx_cpp/Doxygen/: Doxyfile
deploy/onnx_cpp/Doxygen/html/: _model_predict_8h_source.html  _model_predict_global_8h_source.html  annotated.html  class_model_predict-members.html  class_model_predict.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7c1a50fb3b27b0f5cba3414af0564811.html  dir_8a66c40cdeec7d84433c246cd2a7cefa.html  files.html  functions.html  functions_func.html  index.html
deploy/onnx_cpp/Doxygen/html/search/: all_2.js  all_4.js  classes_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  searchdata.js
deploy/onnx_cpp/Doxygen/latex/: _model_predict_8h_source.tex  _model_predict_global_8h_source.tex  annotated.tex  class_model_predict.tex  files.tex  refman.tex
deploy/onnx_cpp/docs/: deploy error.md
deploy/onnx_cpp/src/: CMakeLists.txt
deploy/onnx_cpp/src/ImagePredict/: CMakeLists.txt  ImagePredict.cpp  ImagePredict.h  ModelPredict.cpp  ModelPredict.h  ModelPredictGlobal.h
deploy/onnx_cpp/src/ImagePredict/demo/: CMakeLists.txt  demo_main.cpp
deploy/onnx_cpp/src/ModelPredict/: CMakeLists.txt  ModelPredict.cpp  ModelPredict.h  ModelPredictGlobal.h
deploy/onnx_cpp/src/ModelPredict/demo/: CMakeLists.txt  demo_main.cpp
deploy/onnx_cpp/src/demo/: CMakeLists.txt  demo_main.cpp
deploy/onnx_cpp/version_1.0/Debug/: ImagePredict.lib  ModelPredictd.exp  ModelPredictd.lib
deploy/onnx_cpp/version_1.0/Release/: ModelPredict.exp  ModelPredict.lib
record/: coco_class_idx.json  det_results.json  seg_results.json
src/: onnx_model_export.py  predict.py  requirements.txt  torch_script_gen.py  train.py  validation.py
src/backbone/: resnet50_fpn_model.py
src/record/: det_results.json  seg_results.json
src/utils/: coco_eval.py  draw_box_utils.py  my_dataset_coco.py  plot_curve.py  train_eval_utils.py  train_multi_GPU.py
utils/: coco_eval.py  my_dataset_coco.py  train_eval_utils.py
